Fix color selector being hidden by header
Fixes #73

--- a/client/src/EditOrdersComponent.css
+++ b/client/src/EditOrdersComponent.css
@@ -101,10 +101,10 @@
   z-index: 1001;
 }
 
-.SortableCategory:nth-last-child(1) .SortableCategory__colorPickerContainer,
-.SortableCategory:nth-last-child(2) .SortableCategory__colorPickerContainer {
-  bottom: -1rem;
+.SortableCategory:nth-child(4) ~ .SortableCategory:nth-last-child(1) .SortableCategory__colorPickerContainer,
+.SortableCategory:nth-child(4) ~ .SortableCategory:nth-last-child(2) .SortableCategory__colorPickerContainer {
   top: auto;
+  bottom: -1rem;
 }
 
 .SortableCategory__name {
